UY-1394 oAuth/saml CR fixes